# learn-bazel

./: .gitignore  BUILD.bazel  README.md  WORKSPACE.bazel  deps.bzl  go.work
apps/app-one/: BUILD.bazel  go.mod  main.go
apps/app-two/: BUILD.bazel  go.mod  main.go
